kubernetes/apps/storage/longhorn/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn-ui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://longhorn.exelent.click"
    gethomepage.dev/icon: longhorn.png
    gethomepage.dev/name: Longhorn
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/description: K8s distributed block storage
    gethomepage.dev/weight: "50"
    gethomepage.dev/pod-selector: "app.kubernetes.io/instance=longhorn"
spec:
  hostnames:
    - longhorn.exelent.click
  parentRefs:
    - name: envoy-internal
      namespace: network
  rules:
    - backendRefs:
        - name: longhorn-frontend
          namespace: storage
          port: 80
